crates/mpl-hir/tests/snapshots/diagnostics__rejects_join_without_from_like_mplc.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
expression: "snapshot(\"test:requests | join host test:metadata by host\",)"
---
INPUT:

test:requests | join host test:metadata by host

DIAGNOSTICS:

1. Error: MPL syntax error: unexpected token or operation

REPORTS:

REPORT 1:

  × MPL syntax error: unexpected token or operation
   ╭────
 1 │ test:requests | join host test:metadata by host
   ·                           ──┬─
   ·                             ╰── MPL syntax error: unexpected token or operation
   ╰────
